made corrections in addacademy addcourse admin controller

--- a/angularapp1/src/app/addacademy/addacademy.component.html
+++ b/angularapp1/src/app/addacademy/addacademy.component.html
@@ -24,9 +24,9 @@
   <h5>Add Academy</h5><br>
   <div id="academyLeft">
   <div  id="academyName" >
-      <input formControlName="academyName" type="text" class="form-control" placeholder="Enter Academy name"
+      <input formControlName="academyName" type="text" class="form-control" placeholder="Enter Academy Id"
       [(ngModel)]="institute.instituteId" name="instituteId"><br>
-      <small *ngIf="!addAcademyform.get('academyName').valid && addAcademyform.get('academyName').touched" class="text-danger">Invalid Academy Name</small> 
+      <!-- <small *ngIf="!addAcademyform.get('academyName').valid && addAcademyform.get('academyName').touched" class="text-danger">Invalid Academy Name</small>  -->
 
   </div><br><br>
   <div  id="imageUrl" >
