--- a/angularapp1/src/app/updateacademy/updateacademy.component.html
+++ b/angularapp1/src/app/updateacademy/updateacademy.component.html
@@ -50,7 +50,7 @@
       </div><br><br>
   </div>
   <div id="academyRight">
-      <button (click)="updateAcademy()" class="btn btn-success" id="updateAcademy">Update Academy</button>
+      <button type="submit" (click)="updateAcademy()" class="btn btn-success" id="updateAcademy">Update Academy</button>
 
   </div>
 
