--- a/angularapp1/src/app/updatecourse/updatecourse.component.html
+++ b/angularapp1/src/app/updatecourse/updatecourse.component.html
@@ -10,15 +10,15 @@
 <div style="background-color: gray; height: 100vh;">
 <form action="" id="updateCourse" style="margin-top: 4em; ">
   <div style="margin-bottom: 6em; margin-left: 2em;">
-  <input type="text" id="editCourseName" [(ngModel)]="course.courseName"  placeholder="Enter the course Name" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em;">
-  <input type="text" id="editContactEnrolled" [(ngModel)]="course.courseEnrolled" placeholder="Enter no of student enrolled for the course" style="background-color: lightgrey; padding: 1em; width: 20em; margin-left: 40em;"><br>
+  <input type="text" id="editCourseName" [(ngModel)]="course.courseName"  name="courseName" placeholder="Enter the course Name" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em;">
+  <input type="text" id="editContactEnrolled" [(ngModel)]="course.courseEnrolled" name="courseEnrolled" placeholder="Enter no of student enrolled for the course" style="background-color: lightgrey; padding: 1em; width: 20em; margin-left: 40em;"><br>
   </div>
   <div style="margin-bottom: 6em; margin-left: 2em;">
-  <input type="text" id="editCourseDuration" [(ngModel)]="course.courseDuration" placeholder="Enter the course Duration" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em">
+  <input type="text" id="editCourseDuration" [(ngModel)]="course.courseDuration" name="courseDuration" placeholder="Enter the course Duration" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em">
   </div>
   <div style="margin-left: 2em;">
-  <input type="text" id="editCourseTiming" [(ngModel)]="course.courseTiming" placeholder="Enter the course Timing" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em;">
-  <textarea rows="4" cols="30" form="updateCourse" id="editCourseDescription" [(ngModel)]="course.courseDescription" placeholder="Enter Academy description" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 25em; margin-left: 40em;"></textarea>
+  <input type="text" id="editCourseTiming" [(ngModel)]="course.courseTiming" name="courseTiming" placeholder="Enter the course Timing" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 20em;">
+  <textarea rows="4" cols="30" form="updateCourse" id="editCourseDescription" [(ngModel)]="course.courseDescription" name="courseDescription" placeholder="Enter Academy description" style="margin-right: 8em; background-color: lightgrey; padding: 1em; width: 25em; margin-left: 40em;"></textarea>
   <input type="button" (click)="update()"  id="updateCourse" value="Update Course" style="border-radius: 12px; background-color: forestgreen; padding: 0.5em; color: white;"   routerLink="/institute">
   </div>
 </form>
