addacademy,addcourse,adminacademy validation added

--- a/angularapp1/src/app/addcourse/addcourse.component.css
+++ b/angularapp1/src/app/addcourse/addcourse.component.css
@@ -3,3 +3,11 @@
     font-weight: 600;
     text-align: center;
 }
+input{
+    width:330px;
+    height:54px;
+}
+select{
+    width:100px;
+    height:54px;
+}
