--- a/angularapp1/src/app/addacademy/addacademy.component.html
+++ b/angularapp1/src/app/addacademy/addacademy.component.html
@@ -19,48 +19,46 @@
   <button (click)="logout()" id="logout">Logout</button></div>
 </div>
 <div id="academyBackground">
-    <form [formGroup]="addAcademyform" #ngForm="ngForm" (ngSubmit)="onSubmit($event)">        
+    <form [formGroup]="addacademyform" #ngForm="ngForm" (ngSubmit)="onSubmit($event)">        
 
   <h5>Add Academy</h5><br>
   <div id="academyLeft">
   <div  id="academyName" >
-      <input formControlName="academyName" type="text" class="form-control" placeholder="Enter Academy Id"
+      <input formControlName="instituteId" type="text" class="form-control" placeholder="Enter Academy Id"
       [(ngModel)]="institute.instituteId" name="instituteId"><br>
-      <!-- <small *ngIf="!addAcademyform.get('academyName').valid && addAcademyform.get('academyName').touched" class="text-danger">Invalid Academy Name</small>  -->
-
-  </div><br><br>
+      <small *ngIf="!addacademyform.get('instituteId').valid && addacademyform.get('instituteId').touched" class="text-white">* Invalid Academy ID</small>
+      <input formControlName="instituteName" type="text" id="instituteName" [(ngModel)]="institute.instituteName" name="instituteName" placeholder="Enter the Academy Name" class="form-control"><br>
+      <small *ngIf="!addacademyform.get('instituteName').valid && addacademyform.get('instituteName').touched" class="text-white">* Invalid Academy Name</small>
+    </div>
   <div  id="imageUrl" >
-      <input type="text" class="form-control" placeholder="Enter the academy Image url"
+      <input formControlName="imageUrl" type="text" class="form-control" placeholder="Enter the academy Image url"
       ><br>
-  </div><br><br>
+      <small *ngIf="!addacademyform.get('imageUrl').valid && addacademyform.get('imageUrl').touched" class="text-white">* Invalid Image URL</small>
+  </div>
   <div  id="academyLocation" >
       <input formControlName="academyLocation" type="text" class="form-control" placeholder="Enter Academy Location"
       [(ngModel)]="institute.instituteAddress" name="instituteAddress"><br>
-      <small *ngIf="!addAcademyform.get('academyLocation').valid && addAcademyform.get('academyLocation').touched" class="text-danger">
-          Invalid Academy Loacation</small> 
-
-  </div><br><br>
-  
+      <small *ngIf="!addacademyform.get('academyLocation').valid && addacademyform.get('academyLocation').touched" class="text-white">
+          * Invalid Academy Loacation</small> 
+  </div>
   </div>
   <div id="academyCenter">
       <div id="contactNumber" >
-          <input formControlName="contactNumber" type="number" class="form-control"  placeholder="Enter the contact number"
+          <input formControlName="mobileNumber" type="number" class="form-control"  placeholder="Enter the contact number"
           [(ngModel)]="institute.mobileNumber" name="mobileNumber"><br>
-            <small *ngIf="!addAcademyform.get('contactNumber').valid && addAcademyform.get('contactNumber').touched  "class="text-danger">
-                Invalid Mobile Number
-            </small>
-      </div><br><br>
+          <small *ngIf="!addacademyform.get('mobileNumber').valid && addacademyform.get('mobileNumber').touched" class="text-white">* Mobile Number is required</small>
+      </div>
       <div  id="emailId" >
-          <input  formControlName="emailId" type="email" class="form-control" placeholder="Enter the academy email"
+          <input  formControlName="instituteEmail" type="email" class="form-control" placeholder="Enter the academy email"
           [(ngModel)]="institute.email" name="email" ><br>
-          <small *ngIf="!addAcademyform.get('emailId').valid && addAcademyform.get('emailId'),touched" class="text-danger">
-              Invalid Email Id
-          </small>
+          <small *ngIf="!addacademyform.get('instituteEmail').valid && addacademyform.get('instituteEmail').touched" class="text-white">* Academy Email ID is required</small>   
 
-      </div><br><br>
+
+      </div>
       <div  id="academyDescription" >
-          <input type="text" class="form-control"  placeholder="Enter Academy description"
+          <input formControlName="academyDesc" type="text" class="form-control"  placeholder="Enter Academy description"
           [(ngModel)]="institute.instituteDescription" name="instituteDescription"><br><br>
+          <small *ngIf="!addacademyform.get('academyDesc').valid && addacademyform.get('academyDesc').touched" class="text-white">* Academy Description is required</small>
 
       </div><br><br>
   </div>
