--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -1,1 +1,89 @@
-<p>enrolledcourse works!</p>
+<nav class="navbar" style="background-color:green; border-bottom: 0em solid white;">
+        <div class="container-fluid">
+            <h1 style="color:aliceblue;">School Admission</h1>
+            <h4 style="color:aliceblue;">Academy</h4>
+            <h4 style="color:aliceblue;">Enrolled Course</h4>
+            <h4 style="color:aliceblue;" routerLink="/login">Logout</h4>
+        </div>
+    </nav>
+    
+<div id="academyBackground">
+      <div id="academyLeft" cmargin-top: 1em;>
+      <div  id="firstName" >
+        <input type="text" class="form-control" placeholder="Enter Your first name"
+        ><br>
+      </div><br><br>
+      <div  id="fatherName" >
+        <input type="text" class="form-control" placeholder="Enter Your father name"
+        ><br>
+      </div><br><br>
+      <div  id="motherName" >
+        <input type="text" class="form-control" placeholder="Enter Your mother name"
+        ><br>
+      </div><br><br>
+      <div  id="emailId" >
+        <input type="email" class="form-control" placeholder="Enter Your email id"
+        ><br>
+      </div><br><br>
+      <div  id="age" >
+        <input type="text"  placeholder="Enter Your age"
+        ><br>
+      </div><br><br>
+      <div  id="enterSSLC/HSCMarks" >
+        <input type="text" class="form-control" placeholder="Enter Your SSLC/HSC marks"
+        ><br>
+      </div><br><br>
+      </div>
+      <div id="academyCenter" style="margin-top: 1em;">
+          <div id="lastName" >
+            <input type="text" class="form-control" placeholder="Enter Your Last Name"
+            ><br>
+          </div><br><br>
+          <div id="phoneNumber" >
+            <input type="text" class="form-control" placeholder="Enter Your Phone Number"
+            ><br>
+          </div><br><br>
+          
+      </div>
+      <div id="academyRight">
+          <div id="maleorfemale">
+        <input type="text" class="form-control" placeholder="Enter male or female"
+        ><br>
+      </div><br><br>
+      <div id="phoneNumber2">
+      <input type="text" class="form-control" placeholder="Enter alternate number"
+            ><br>
+          </div><br><br>
+         
+      </div>
+      
+    </div>
+      <div class="column2">
+        <p style="margin-top: 1em;"> Address Information </p>
+        <div style="padding : 1em">
+        <label for="houseNo">House No :</label>
+        <input type="text" id="houseNo" style="background-color: white; padding: 0.5em; width: 20em; margin-left: 2em;"><br>
+        </div>
+        <div style="padding : 1em">
+        <label for="streetName">Street Name :</label>
+        <input type="text" id="streetName" style="background-color: white; padding: 0.5em; width: 20em; margin-left: 2em;"><br>
+        </div>
+        <div style="padding : 1em">
+        <label for="areaName">Area Name :</label>
+        <input type="text" id="areaName" style="background-color: white; padding: 0.5em; margin-right: 5em; width: 15em; margin-left: 2em;">
+        <label for="pincode">Pincode :</label>
+        <input type="text" id="pincode" style="background-color: white; padding: 0.5em; margin-left: 2em;"><br>
+        </div>
+        <div style="padding : 1em">
+        <label for="state">State :</label>
+        <input type="text" id="state" style="background-color: white; padding: 0.5em; margin-right: 8em; margin-left: 2em;">
+        <label for="nationality">Nationality :</label>
+        <input type="text" id="nationality" style="background-color: white; padding: 0.5em; margin-left: 2em;">
+        </div>
+
+  
+
+
+    
+    </div> 
+      
