--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -8,7 +8,7 @@
     </nav>
     
 <div id="academyBackground">
-      <div id="academyLeft" cmargin-top: 1em;>
+      <div id="academyLeft" style="margin-top: 1em;">
       <div  id="firstName" >
         <input type="text" class="form-control" placeholder="Enter Your first name"
         ><br>
