--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar" style="background-color:green; border-bottom: 0em solid white;">
         <div class="container-fluid">
             <h1 style="color:aliceblue;">School Admission</h1>
-            <h4 style="color:aliceblue; routerLink="/viewacademy">Academy</h4>
+            <h4 style="color:aliceblue;">Academy</h4>
             <h4 style="color:aliceblue;">Enrolled Course</h4>
             <h4 style="color:aliceblue;" routerLink="/login">Logout</h4>
         </div>
