enrolled course component corrected

--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -1,4 +1,6 @@
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <nav class="navbar" style="background-color:green; border-bottom: 0em solid white;">
   <div class="container-fluid">
       <h1 style="color:aliceblue;">School Admission</h1>
@@ -88,5 +90,5 @@
 
 </div> 
 <div id="enroll">
-  <button  class="btn btn-success" id="enrollNowButton">Enroll now</button>
+  <button  type="submit" class="btn btn-success" id="enrollNowButton">Enroll now</button>
 </div>
