--- a/angularapp1/src/app/updateacademy/updateacademy.component.html
+++ b/angularapp1/src/app/updateacademy/updateacademy.component.html
@@ -38,7 +38,7 @@
   <div id="academyCenter">
       <div id="editContactNumber" >
           <input type="text " class="form-control"  placeholder="Enter the contact number"
-          [(ngModel)]="institute.mobileNumber" name="mobileNumber"><br>
+          [(ngModel)]="institute.mobileNo" name="mobileNo"><br>
       </div><br><br>
       <div  id="editEmailId" >
           <input type="text" class="form-control" placeholder="Enter the academy email"
